# citadel-xr

./: README.md  dune  esy.json  middleware.js  package-lock.json  package.json  run-tests.sh
esy.lock/: index.json
games/citadel/: Citadel.ml  InitialScene.ml  dune
games/citadel/Citadel_Assets/: AKM.ml  Building1.ml  Crate.ml  Flashlight.ml  Ghoul.ml  Glock.ml  PlasmaRifle.ml  ShellCase.ml  Silencer.ml  Target.ml  Terrain.ml  dune
games/citadel/Citadel_Entities/: Ambient.ml  BaseGrabbable.ml  Bolt.ml  Bullet.ml  Categories.ml  Collision.ml  Components.ml  Crate.ml  Damage.ml  Flashlight.ml  Ghoul.ml  Gib.ml  Glock.ml  Holster.ml  HolsterTypes.ml  Impact.ml  LaserPointer.ml  MachineGun.ml  MiniCrate.ml  MuzzleFlash.ml  Payloads.ml  Pedestal.ml  Player.ml  Recoil.ml  Recoil.mli  Silencer.ml  Sphere.ml  StaticHolster.ml  Systems.ml  Target.ml  dune
public/: dune  index.html
src/Editor/: Editor.ml  dune
src/EntityManager/: Component.ml  Effect.ml  Entity.ml  EntityContext.ml  EntityDefinition.ml  EntityId.ml  EntityInstance.ml  EntityManager.ml  EntityManager.mli  IntMap.ml  Msg.ml  ReadOnlyWorld.ml  System.ml  World.ml  dune
src/Game/: Console.ml  Experiments.ml  Game.ml  Scene.ml  dune
src/Input/: Input.ml  Input.mli  dune
src/Mesh/: AnimatedMesh.ml  AnimatedMesh2.ml  Animation.ml  AnimationPlayer.ml  Definition.ml  DynamicMesh.ml  Instance.ml  Loader.ml  Material.ml  Mesh.ml  MeshProcessor.ml  ParticleSystem.ml  Plane.ml  Registry.ml  Sphere.ml  Static.ml  dune
src/React3d/: React3d.ml  Reconciler.ml  dune
test/: RunTests.ml  dune  test-runner.js
(+49 files in other folders)
